--- a/static/main/css/Dashboard/dashboard-styles.css
+++ b/static/main/css/Dashboard/dashboard-styles.css
@@ -2,6 +2,8 @@
 #dashboard-section {
   width: 100%;
   position: relative;
+  /* display: flex; */
+  /* border: 10px solid pink; */
 }
 #options-subtitle-template,
 #options-audio-template,
@@ -49,21 +51,16 @@
   height: 90vh;
   width: 80vw;
   position: absolute;
-  border: 5px double var(--borderInputs);
   bottom: -5px;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-  /* border-top: 1px solid var(--greenFull3);
-  border-left: 1px solid var(--greenFull2);
-  border-right: 3px solid var(--greenFull2);
-  border-bottom: 4px solid var(--greenFull2); */
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   /* backdrop-filter: blur(14px) saturate(180%);
   -webkit-backdrop-filter: blur(14px) saturate(180%); */
-  background-color: rgb(12, 12, 12);
+  background-color: var(--borderInputs);
   /* background: linear-gradient(0deg, rgba(0,0,0,1) 88%, rgba(56,176,0,1) 100%); */
 }
 
@@ -261,22 +258,25 @@
   width: calc(100% - 70px);
   float: right;
   display: flex;
-  align-items: end;
+  align-items: center;
   justify-content: center;
+  /* border: 1px solid orange; */
 }
 
 .form-user-dashboard {
   width: 80%;
   min-height: 100vh;
-  float: right;
   border-radius: 0;
   display: flex;
   flex-direction: column;
   gap: 10px;
   padding: 40px;
-  /* background: rgb(37, 37, 37); */
   border-radius: 5px;
-  /* *{border:1px solid gold;} */
+  margin-bottom: 30px;
+  /* border: 1px solid red; */
+  /* * {
+    border: 1px solid gold;
+  }  */
 }
 
 #container-options-generate-scripts {
@@ -304,13 +304,13 @@
 }
 
 #options-generate-scripts > span:nth-child(1) {
-border-top-left-radius: 10px;
-border-bottom-left-radius: 10px;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
 }
 
 #options-generate-scripts > span:nth-child(3) {
-border-top-right-radius: 10px;
-border-bottom-right-radius: 10px;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 
 .button-option-scripts {
@@ -322,18 +322,26 @@ border-bottom-right-radius: 10px;
   align-items: center;
   justify-content: space-evenly;
   gap: 30px;
-  color: white;
   padding: 10px 15px;
   border: 1px solid var(--borderInputs);
   cursor: pointer;
   margin: 40px 0;
   position: relative;
-  transition: .6s all;
+  transition: 0.3s all;
+  color: var(--borderInputs);
 }
 
 .button-option-scripts:hover {
   background-color: var(--borderInputs);
+  color: white;
   box-shadow: 1px 1px 1px 1px var(--borderInputs);
+}
+
+.button-option-scripts > img {
+  transition: 0.4s all;
+}
+.button-option-scripts:hover > img {
+  transform: scale(1.3);
 }
 
 .button-option-scripts > p {
@@ -360,7 +368,7 @@ border-bottom-right-radius: 10px;
 }
 
 .input-user-dashboard:focus {
-  border: 1px solid var(--borderInputs);
+  outline: none;
 }
 /* 
 .input-user-dashboard::placeholder{
@@ -448,7 +456,8 @@ input[type="file"][webkitdirectory]:hover::file-selector-button {
 }
 
 #inputManualScript:focus {
-  border: 1px solid var(--panel2);
+  border: 1px solid var(--borderInputs);
+  outline: none;
 }
 /* BOTON DE SUGERIR TITULOS */
 
@@ -477,14 +486,6 @@ input[type="file"][webkitdirectory]:hover::file-selector-button {
   box-shadow: 1px 1px 1px 1px var(--borderInputs);
 }
 
-#configForm,
-#changeCredentialsForm,
-#minute-info {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-}
-
 /* BOTON DE SUGERIR TITULOS */
 /* DASHBOARD APP*/
 /* DASHBOARD APP*/
@@ -506,13 +507,10 @@ input[type="file"][webkitdirectory]:hover::file-selector-button {
 
 /* BUTTON SAVE API KEY */
 .btn-custom {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   overflow: hidden;
-  width: 50%;
+  width: 32%;
   margin: 0 auto;
-  padding: 10px 0;
+  padding: 10px;
   border-radius: 4px;
   border: 1px solid var(--greenFull3);
   transition: 0.2s;
@@ -523,18 +521,44 @@ input[type="file"][webkitdirectory]:hover::file-selector-button {
   font-size: 15px;
   font-family: var(--main);
   font-weight: bold;
+  position: relative;
+  text-align: left;
+}
+
+.btn-custom > img {
+  position: absolute;
+  right: 15px;
+  top: 5px;
+  transition: 0.4s all;
 }
 
 .btn-custom:hover {
   background-color: var(--greenFull2);
 }
-
+.btn-custom:hover > img {
+  transform: scale(1.3);
+  filter: drop-shadow(1px 1px 10px white);
+}
 /* BUTTON SAVE API KEY */
 
 /* CONFIG SECTION */
-.config-form {
-  /* width: 50%;
-  background-color: red;
-  border: 1px solid gold; */
+#configForm,
+#changeCredentialsForm,
+#minute-info {
+  width: 60%;
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+}
+
+#content-change-credencials,
+#content-config-apis {
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
 }
 /* CONFIG SECTION */
