--- a/static/main/css/descargar_eliminar.css
+++ b/static/main/css/descargar_eliminar.css
@@ -1,10 +1,9 @@
 /* Contenedor para los botones */
 .button-container {
-  display: inline-block;
+  display: flex;
   align-items: center;
   justify-content: center;
   gap: 10px;
-  margin-top: 10px;
 }
 
 /* Botón de eliminar */
@@ -13,26 +12,29 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 55px;
-  height: 55px;
-  border-radius: 50%;
-  background-color: rgba(255, 95, 95, 0);
+  width: 50px;
+  height: 50px;
+  border: none;
+  border-radius: 4px;
   cursor: pointer;
-  border: 2px solid rgba(255, 201, 201, 0);
   transition-duration: 0.3s;
   position: relative;
-  overflow: hidden;
+  /* overflow: hidden; */
+  background-color: var(--borderInputs);
 }
+
 .bin-bottom {
   width: 12px;
   z-index: 2;
 }
+
 .bin-top {
   width: 17px;
   transform-origin: right;
   transition-duration: 0.3s;
   z-index: 2;
 }
+
 .bin-button:hover .bin-top {
   transform: rotate(45deg);
 }
@@ -69,8 +71,7 @@
   width: 50px;
   height: 50px;
   border: none;
-  border-radius: 50%;
-  background-color: rgb(27, 27, 27);
+  border-radius: 4px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -78,7 +79,7 @@
   cursor: pointer;
   position: relative;
   transition-duration: 0.3s;
-  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.11);
+  background-color: var(--borderInputs);
 }
 
 .svgIcon {
@@ -128,7 +129,7 @@
 }
 
 .Btn:hover {
-  background-color: rgb(28, 238, 0);
+  background-color: var(--greenfull2);
   transition-duration: 0.3s;
 }
 
