--- a/static/main/css/styles.css
+++ b/static/main/css/styles.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 :root {
   /* PALETA DE COLORES */
   --greenFull1: #9df01a;
@@ -16,6 +16,7 @@
   /* FONTS */
   --main: "Lato", serif;
   --second: "Roboto", serif;
+  --third: "Kanit", serif;
 }
 
 * {
@@ -73,78 +74,9 @@ body {
     height: 12px;
   }
 }
-
 .container {
-  position: relative;
   width: 100%;
 }
-
-/* BENEFITS SECTION */
-
-.benefits {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  gap: 25px;
-  padding: 10px;
-  min-height: 100vh;
-  max-width: 80vw;
-  margin: 0 auto;
-  p {
-    font-family: var(--main);
-    font-size: 30px;
-    font-weight: bold;
-    color: var(--greenFull3);
-    text-align: center;
-  }
-
-  span {
-    font-family: var(--second);
-    font-size: 20px;
-    color: var(--greenFull3);
-    text-align: center;
-    font-weight: 300;
-  }
-
-  .cards-benefits-container {
-    display: flex;
-    gap: 20px;
-
-    .card-benefit {
-      padding: 15px;
-      border-radius: 5px;
-      background: var(--greenFull3);
-      display: flex;
-      flex-direction: column;
-      justify-content: space-around;
-      align-items: center;
-      box-shadow: 1px 1px 10px 2px var(--greenFull3);
-      * {
-        border: 1px solid var(--green2);
-      }
-      img {
-        width: 100px;
-        margin-bottom: 15px;
-      }
-      h3 {
-        font-family: var(--main);
-        font-size: 25px;
-        color: black;
-        text-align: center;
-      }
-      p {
-        font-family: var(--second);
-        font-size: 20px;
-        color: var(--greenFull1);
-        text-align: center;
-        font-weight: 200;
-      }
-    }
-  }
-}
-
-/* BENEFITS SECTION */
 
 .card {
   background-color: #2b2b2b;
@@ -376,28 +308,17 @@ body {
   position: fixed;
   bottom: 20px;
   right: 20px;
-  width: 60px;
-  height: 60px;
-  background-color: #15251d;
-  color: white;
-  padding: 10px;
+  width: 70px;
   border: none;
-  border-radius: 50%;
   cursor: pointer;
   z-index: 1000;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   animation: bounce 2s infinite;
-  transition: transform 0.3s;
+  transition: 0.3s;
 }
 
-.chatbot-toggle img {
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
+.chatbot-toggle:hover {
+  transform: scale(1.2);
 }
-
 /* Animación de movimiento */
 @keyframes bounce {
   0%,
@@ -406,6 +327,7 @@ body {
   }
   50% {
     transform: translateY(-10px);
+    transform: scale(1.08);
   }
 }
 
@@ -974,7 +896,6 @@ button:hover #clip {
 
 .panel-cancel-content > div {
   width: 80%;
-
 }
 .panel-cancel-content > div > h2 {
   color: white;
@@ -1082,7 +1003,6 @@ button:hover #clip {
 .btn-cancel-panel:hover {
   color: var(--greenFull1);
   background-color: black;
-
 }
 
 .btn-confirm-panel {
@@ -1161,4 +1081,225 @@ button:hover #clip {
 
 .tab-pane {
   animation: fadeIn 0.5s ease-in-out;
+}
+
+/* SECTION YOUR VIDEOS */
+
+#your-videos {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 30px;
+  width: 80%;
+  min-height: 100vh;
+  margin-bottom: 30px;
+  position: relative;
+  /* border: 1px solid gold;
+  * {
+    border: 1px solid red;
+  } */
+}
+
+.box-title-content {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  justify-content: center;
+}
+
+.box-title-content > h3 {
+  text-align: center;
+  font-size: 35px;
+  font-family: var(--main);
+  color: white;
+  width: 100%;
+}
+
+#inProgressTasks {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  gap: 10px;
+  position: relative;
+  margin-top: 35px;
+  border-radius: 5px;
+  padding: 25px;
+  background-color: var(--borderInputs);
+}
+
+/* BARRA DE CARGA */
+
+.progress-container {
+  width: 70%;
+  height: 20px;
+  background-color: var(--inputs);
+  border-radius: 2px;
+  position: relative;
+}
+
+.progress-bar {
+  height: 100%;
+  width: 0%;
+  background: radial-gradient(
+    circle,
+    var(--greenFull1) 10%,
+    var(--greenFull2) 50%,
+    var(--greenFull3) 90%
+  );
+  background-size: 200% 200%;
+  animation: vaiven 3s infinite, brillo 1.5s ease-in-out infinite;
+  border-radius: 2px;
+  transition: width 0.3s ease;
+}
+@keyframes vaiven {
+  0% {
+    background-position: 100% 50%;
+  }
+  50% {
+    background-position: 0% 50%;
+  }
+  100% {
+    background-position: 100% 50%;
+  }
+}
+
+@keyframes brillo {
+  0%,
+  100% {
+    filter: brightness(1);
+    box-shadow: 1px 1px 5px 1px grey;
+  }
+  50% {
+    filter: brightness(1.2);
+  }
+}
+
+/* BARRA DE CARGA */
+
+#inProgressTasks > span {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  padding: 10px;
+  border-radius: 5px;
+  width: 100%;
+}
+
+#inProgressTasks > span > p {
+  font-family: var(--third);
+}
+
+#puntos-suspensivos {
+  display: flex;
+}
+
+.dot {
+  font-size: 25px;
+  animation: aparecer 1s ease-in-out infinite;
+}
+
+.dot:nth-child(1) {
+  animation-delay: 0s;
+}
+
+.dot:nth-child(2) {
+  animation-delay: 0.5s;
+}
+
+.dot:nth-child(3) {
+  animation-delay: 1s;
+}
+
+@keyframes aparecer {
+  0% {
+    opacity: 0;
+  }
+  33% {
+    opacity: 1;
+  }
+  66% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+#videosList {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  position: relative;
+  padding: 0 0 30px 0;
+  border-bottom: 1px solid var(--borderInputs);
+}
+
+#videosList > h4 {
+  position: absolute;
+  left: 0;
+  top: 0;
+  font-size: 25px;
+  font-weight: bolder;
+  font-family: var(--main);
+}
+
+#videos-store {
+  width: 100%;
+}
+
+#videos-store > h3 {
+  font-size: 25px;
+  font-weight: bolder;
+  font-family: var(--main);
+  margin-bottom: 40px;
+}
+
+.status {
+  color: var(--greenFull2);
+  font-size: 20px;
+  font-weight: bolder;
+  display: flex;
+  gap: 15px;
+  align-items: center;
+  justify-content: center;
+}
+
+.status > p {
+  font-family: var(--third);
+  filter: drop-shadow(1px 1px 5px var(--borderInputs));
+}
+
+.status > img {
+  animation: bounce 2s infinite;
+}
+
+#existingVideos {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+  flex-wrap: wrap;
+}
+
+.video-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  gap: 10px;
+  border: 1px solid var(--borderInputs);
+  width: 400px;
+  height: 400px;
+  border-radius: 4px;
+  padding: 20px;
+}
+
+.video-item > h4{
+  font-size: 18px;
+  font-family: var(--third);
 }
