--- a/static/main/css/styles.css
+++ b/static/main/css/styles.css
@@ -44,12 +44,12 @@
 }
 
 ::-webkit-scrollbar-track {
-  background: black;
+  background: rgb(37, 37, 37);
 }
 
 ::-webkit-scrollbar-thumb {
-  background: rgb(23, 23, 23);
-  border-radius: 15px;
+  background: rgba(128, 128, 128, 0.543);
+  border-radius: 4px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
@@ -655,6 +655,7 @@ button:hover #clip {
   padding: 15px;
   color: #ffffff;
   animation: fadeIn 0.5s ease-in-out;
+  transition: 0.5s all;
   width: 400px;
   height: 400px;
   position: relative;
@@ -662,6 +663,12 @@ button:hover #clip {
     border: 1px solid red;
   } */
 }
+
+.plan-item:hover {
+  transform: scale(1.013);
+  box-shadow: 1px 1px 10px 2px var(--greenFull2);
+}
+
 #plan-item-feature {
   margin-top: 60px;
 }
@@ -683,13 +690,14 @@ button:hover #clip {
 #plan-item-feature-line > img {
   width: 30px;
 }
+
 .plan-item h3 {
   margin: 0;
   font-size: 1.8rem;
   color: black;
   font-family: var(--main);
   font-weight: bold;
-  background-color: var(--greenFull1);
+  background-color: var(--greenFull3);
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
   text-align: center;
@@ -743,7 +751,7 @@ button:hover #clip {
 .btn-subscription {
   background-color: var(--greenFull3);
   color: #ffffff;
-  border: 1px solid white;
+  border: none;
   border-radius: 5px;
   transition: background-color 0.3s ease;
   padding: 10px 20px;
@@ -816,203 +824,6 @@ button:hover #clip {
   100% {
     background-position: 0% 50%;
   }
-}
-
-/*cancelar plan*/
-/* Panel de confirmación overlay */
-.panel-cancel {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  backdrop-filter: blur(25px) saturate(180%);
-  -webkit-backdrop-filter: blur(25px) saturate(180%);
-  background-color: rgba(13, 13, 13, 0.343);
-  z-index: 9999;
-  display: none;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-end;
-}
-
-.panel-cancel > a {
-  position: absolute;
-  top: 20px;
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-  font-family: var(--main);
-  font-weight: bold;
-  font-size: 25px;
-  -webkit-text-stroke: 2px black;
-  color: white;
-  font-size: 25px;
-}
-
-@keyframes glow {
-  0% {
-    border-top: 1px solid white;
-  }
-  25% {
-    border-right: 1px solid white;
-  }
-  50% {
-    border-bottom: 1px solid white;
-  }
-  75% {
-    border-left: 1px solid white;
-  }
-  100% {
-    border: 1px solid white;
-  }
-}
-
-.animation-class {
-  animation: glow 2s infinite alternate;
-}
-
-.panel-cancel > a > img {
-  width: 70px;
-  filter: drop-shadow(1px 1px 5px var(--greenFull3));
-}
-
-/* Contenido interno (caja negra) */
-.panel-cancel-content {
-  /* background-color: rgb(13, 13, 13); */
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  gap: 10px;
-  width: 90vw;
-  height: 80vh;
-  padding: 20px;
-  box-sizing: border-box;
-  font-family: var(--main);
-  text-align: center;
-  overflow-y: auto;
-}
-
-.panel-cancel-content > div {
-  width: 80%;
-}
-.panel-cancel-content > div > h2 {
-  color: white;
-  font-weight: bold;
-  font-size: 28px;
-  font-family: var(--main);
-}
-.panel-cancel-content > div > p {
-  color: white;
-  font-size: 16px;
-  font-family: var(--second);
-  text-align: center;
-  width: 100%;
-}
-
-.panel-cancel-content > form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  gap: 5px;
-  width: 80%;
-  margin: 0 auto;
-}
-
-.panel-cancel-content > form > label,
-.panel-cancel-content > form > select,
-.panel-cancel-content > form > select > option,
-.panel-cancel-content > form > textarea {
-  width: 100%;
-  text-align: left;
-  font-family: var(--main);
-  border-radius: 5px;
-  font-size: 20px;
-}
-
-.panel-cancel-content > form > select,
-.panel-cancel-content > form > textarea {
-  background-color: transparent;
-  color: white;
-  border-radius: 2px;
-}
-
-#motivo > option {
-  color: black;
-  background-color: white;
-}
-
-#motivo,
-#comentarios,
-#comentarios:focus,
-#motivos:focus {
-  border-radius: 5px;
-  border: 1px solid white;
-}
-
-.panel-cancel-content > form > textarea {
-  height: 100px;
-}
-
-.panel-cancel-content > form > select > option:hover {
-  color: black;
-}
-
-/* Botones específicos */
-
-.cancel-buttons-div {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-  gap: 40px;
-  margin-top: 15px;
-}
-
-.cancel-buttons-div > button {
-  border: none;
-  background-color: rgba(34, 34, 34, 0.27);
-  font-weight: bolder;
-  font-size: 1.5rem;
-  font-family: var(--main);
-  padding: 15px;
-  cursor: pointer;
-  border-radius: 4px;
-}
-
-.btn-cancel-plan {
-  background-color: transparent;
-  cursor: pointer;
-  color: white;
-  font-weight: bolder;
-  font-family: var(--main);
-  font-size: 20px;
-}
-
-.btn-cancel-plan:hover {
-  color: red;
-}
-
-.btn-cancel-panel {
-  color: var(--greenFull3);
-  font-weight: bold;
-}
-.btn-cancel-panel:hover {
-  color: var(--greenFull1);
-  background-color: black;
-}
-
-.btn-confirm-panel {
-  font-weight: bold;
-  color: rgb(255, 86, 86);
-}
-
-.btn-confirm-panel:hover {
-  background-color: black;
-  color: red;
 }
 
 /* Mensajes de alerta centrados */
@@ -1101,18 +912,21 @@ button:hover #clip {
 }
 
 .box-title-content {
+  margin-top: 30px;
   display: flex;
-  gap: 10px;
   align-items: center;
   justify-content: center;
+  gap: 20px;
+  width: 90%;
 }
 
 .box-title-content > h3 {
   text-align: center;
   font-size: 35px;
   font-family: var(--main);
+  font-weight: bolder;
+
   color: white;
-  width: 100%;
 }
 
 #inProgressTasks {
@@ -1126,7 +940,6 @@ button:hover #clip {
   margin-top: 35px;
   border-radius: 5px;
   padding: 25px;
-  background-color: var(--borderInputs);
 }
 
 /* BARRA DE CARGA */
@@ -1233,7 +1046,8 @@ button:hover #clip {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 100%;
+  width: 90%;
+  height: 60vh;
   position: relative;
   padding: 0 0 30px 0;
   border-bottom: 1px solid var(--borderInputs);
@@ -1242,21 +1056,10 @@ button:hover #clip {
 #videosList > h4 {
   position: absolute;
   left: 0;
-  top: 0;
+  top: -10px;
   font-size: 25px;
   font-weight: bolder;
   font-family: var(--main);
-}
-
-#videos-store {
-  width: 100%;
-}
-
-#videos-store > h3 {
-  font-size: 25px;
-  font-weight: bolder;
-  font-family: var(--main);
-  margin-bottom: 40px;
 }
 
 .status {
@@ -1278,12 +1081,87 @@ button:hover #clip {
   animation: bounce 2s infinite;
 }
 
+#videos-store {
+  width: 90%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-bottom: 1px solid var(--borderInputs);
+}
+
+#videos-store > h3 {
+  font-size: 25px;
+  font-weight: bolder;
+  font-family: var(--main);
+  margin-bottom: 40px;
+  width: 100%;
+  text-align: left;
+}
+
+#btn-open-existing-videos {
+  width: 150px;
+  padding: 10px 15px;
+  position: relative;
+  border-radius: 4px;
+  border: 1px solid var(--borderInputs);
+  font-weight: 200;
+  font-family: var(--third);
+  background-color: transparent;
+  color: white;
+  cursor: pointer;
+  text-align: left;
+  width: 80%;
+  margin: 0 auto;
+  transition: 0.5s all;
+}
+
+#btn-open-existing-videos:hover {
+  color: black;
+  letter-spacing: 2px;
+  background-color: white;
+}
+
 #existingVideos {
+  margin-top: 10px;
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 5px;
   flex-wrap: wrap;
+  transition: 0.6s all;
+}
+
+#existingVideos::-webkit-scrollbar {
+  width: 7px;
+}
+
+#existingVideos::-webkit-scrollbar-thumb {
+  background: var(--panel2);
+  border-radius: 4px;
+}
+
+#existingVideos::-webkit-scrollbar-track {
+  background: var(--borderInputs);
+}
+
+.open-existing {
+  height: 80vh;
+  border: 1px solid var(--borderInputs);
+  border-radius: 15px;
+  box-shadow: none;
+  overflow-y: scroll;
+  padding: 30px;
+  background-color: var(--borderInputs);
+  box-shadow: 1px 1px 5px var(--borderInputs);
+}
+
+.close-existing {
+  overflow-y: hidden;
+  height: 10px;
+  border-radius: none;
+  border: none;
+  padding: 0;
 }
 
 .video-item {
@@ -1292,14 +1170,14 @@ button:hover #clip {
   align-items: center;
   justify-content: space-between;
   gap: 10px;
-  border: 1px solid var(--borderInputs);
+  /* border-radius: 4px;
+  border: 1px solid var(--borderInputs); */
   width: 400px;
   height: 400px;
-  border-radius: 4px;
   padding: 20px;
 }
 
-.video-item > h4{
+.video-item > h4 {
   font-size: 18px;
   font-family: var(--third);
 }
