--- a/templates/main/base.html
+++ b/templates/main/base.html
@@ -93,16 +93,11 @@
     <!-- HERO SECTION -->
 
     <!-- BENEFITS SECTION -->
-    <section class="benefits">
-      <!-- <p>Lorem ipsum dolor sit amet.</p>
-      <span
-        >Lorem ipsum dolor sit amet consectetur adipisicing elit. Id
-        necessitatibus in autem.</span
-      > -->
+    <!-- <section class="benefits">
       <div class="cards-benefits-container">
         <div class="card-benefit">
           <h3>Personalización</h3>
-          <!-- <img src="{% static 'img/clipgen.ai logo.png' %}" alt="Logo" /> -->
+          <img src="{% static 'img/clipgen.ai logo.png' %}" alt="Logo" />
           <p>
             Personaliza tus videos con una amplia variedad de plantillas y
             efectos.
@@ -110,7 +105,7 @@
         </div>
         <div class="card-benefit">
           <h3>Automatización</h3>
-          <!-- <img src="{% static 'img/clipgen.ai logo.png' %}" alt="Logo" /> -->
+          <img src="{% static 'img/clipgen.ai logo.png' %}" alt="Logo" />
           <p>
             Velocidad asegurada para mayor provecho y menos perdida de tiempo.
           </p>
@@ -149,14 +144,14 @@
         </div>
         <div class="card-benefit">
           <h3>Exportación</h3>
-          <!-- <img src="{% static 'img/clipgen.ai logo.png' %}" alt="Logo" /> -->
+          <img src="{% static 'img/clipgen.ai logo.png' %}" alt="Logo" />
           <p>
             Exporta tus videos en alta calidad y compártelos en tus redes
             sociales.
           </p>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- BENEFITS SECTION -->
 
     <!-- LOGIN SECTION -->
@@ -297,6 +292,7 @@
     <script src="{% static 'main/js/chatbot.js' %}"></script>
     <script src="{% static 'main/js/tab_management.js' %}"></script>
     <script src="{% static 'main/js/dashboard.js' %}"></script>
+    <script src="{% static 'main/js/panelCancel.js' %}"></script>
     <script src="https://cdn.jsdelivr.net/npm/nprogress@0.2.0/nprogress.js"></script>
     <script src="{% static 'main/js/init.js' %}"></script>
 
